4.5 -> 5.0:
    - jbj: HEADER_MAGIC_YES always: eliminate HEADER_MAGIC_NO usages.
    - rse: provide support for GNU binutils ld(1)'s --as-needed via Autoconf option --enable-build-maxextlibdep
    - jbj: rip CentOS3/x86_64 gcc-3.2.3-49.x86_64 hack-a-round. Fix gcc!
    - jbj: upgrade to db-4.6.18.
    - rse: drop MARK64 hack as it isn't RPM's business to decide for lib64 -- for this there is Autoconf option --libdir
    - rse: with --with-db-tools-integrated one can now build (and install) a db_tool which integrates all db_xxx BDB tools
    - jbj: add RPMTAG_DBINSTANCE header extension.
    - jbj: rip deep ia64 emulated triarch multilib hacks. worth millions to vendor, not me.
    - jbj: rip Depends index and dependency result caching.
    - rse: ported to DragonFly BSD (1.8.1)
    - rse: add the necessary Autoconf glue for using the ancient (and nowadays resurrected by POSIX) insque(3)
    - rse: ported to IBM AIX (5.3)
    - rse: ported to Mac OS X (10.4), aka Darwin (8.10)
    - rse: re-implement --force option (on installation) with a simple POPT alias instead of twisted and spreaded code
    - rse: for libraries prefer "pkg-config foo" before "foo-config" as pkg-config(1) provides more precise CPPFLAGS/CFLAGS
    - rse: unbreak rpm(1) short-hand option "--force" on package installation
    - rse: use implicit internal library dependencies by default, but allow disabling via --disable-build-intlibdep
    - rse: use implicit external library dependencies by default, but allow disabling via --disable-build-extlibdep
    - rse: remove GNU libtool *.la files during installation only if --disable-build-lafiles is used
    - rse: on --rebuilddb remove (currently) unused database files to avoid mixed formats on backend upgrades and switches
    - jbj: adjust signal polling for python exit purposes <pmatlai@redhat.com>.
    - rse: provide a first cut for an librpmconstant.vers ld(1) version script
    - jbj: reapply 2.127 with more careful rpmExpand() fix.